--- a/scss/theme/_dark-mode.scss
+++ b/scss/theme/_dark-mode.scss
@@ -53,5 +53,9 @@ body.dark {
     .title {
         border-bottom: 1px solid $blue;
     }
+
+    #delete-collection {
+        border: none;
+    }
 }
 
